# mcp-libre

./: .gitignore  AGENT.md  CHANGELOG.md  DEVEL.md  README.md  dev-deploy.ps1  install-plugin.ps1  install.ps1  install.sh  pyproject.toml  setup-windows.ps1
config/: claude_code.json.template  claude_config.json.template  claude_desktop.json.template
docs/: live-viewing.md  prerequisites.md  troubleshooting.md  windows-setup.md
plugin/: Addons.xcu  Jobs.xcu  MCPServerConfig.xcs  MCPServerConfig.xcu  OptionsDialog.xcu  ProtocolHandler.xcu  description-en.txt  description.xml  release-notes-en.txt
plugin/dialogs/: MCPSettings.xdl  MCPTunnel.xdl
plugin/pythonpath/: ai_interface.py  main_thread_executor.py  mcp_server.py  registration.py  ssl_certs.py  uno_bridge.py  version.py
plugin/pythonpath/services/: __init__.py  base.py  calc.py  comments.py  images.py  impress.py  styles.py  tables.py
plugin/pythonpath/tools/: __init__.py  annotations.py  base.py  batch.py  calc.py  comments.py  diagnostics.py  document.py  editing.py  frames.py  images.py  impress.py  metadata.py  navigation.py  protection.py  search.py  (+5 more)
scripts/: dev-deploy.ps1  dev-deploy.sh  install-plugin.ps1  install-plugin.sh  kill-libreoffice.ps1  kill-libreoffice.sh  launch-lo-debug.ps1  launch-lo-debug.sh  merge-plugin-branch.sh
src/: __init__.py  libremcp.py  main.py  models.py  plugin.py  server.py
src/backends/: __init__.py  base.py  gui.py  headless.py
src/tools/: __init__.py  calc_tools.py  common_tools.py  impress_tools.py  writer_tools.py
tests/: test_client.py  test_insert_fix.py
(+7 files in other folders)
